--- a/Index.html
+++ b/Index.html
@@ -57,7 +57,7 @@
   <section class="container hero_position">
     <div class="row">
       <!-- menu section start -->
-      <div class="col-lg-1 bg-light shadow rounded_side_nav">
+      <div class="col-1 bg-light shadow rounded_side_nav">
         <i class="bi bi-menu-button-wide d-block d-flex justify-content-center py-5"></i>
         <i class="bi bi-menu-button-wide d-block d-flex justify-content-center py-5"></i>
         <i class="bi bi-menu-button-wide d-block d-flex justify-content-center py-5"></i>
@@ -67,7 +67,7 @@
       </div>
       <!-- menu section end -->
 
-      <div class="col-lg-11 ">
+      <div class="col-11 ">
         <div class="container-fluid">
           <div class="row bg-light rounded-3 pt-3">
 
@@ -232,7 +232,7 @@
 
               <!-- table header menu end  -->
 
-              <table class="table table-borderless shadow-sm">
+              <table class="table table-borderless shadow-sm mt-2">
                 <!-- table head  -->
                 <thead class="border-bottom">
                   <tr>
@@ -325,18 +325,18 @@
                   </div>
                 </div>
                 <div>
-                  <nav aria-label="Page navigation example">
-                    <ul class="pagination">
-                      <li class="page-item">
-                        <a class="page-link" href="#" aria-label="Previous">
+                  <nav aria-label="Page  navigation example">
+                    <ul class="pagination shadow-sm ">
+                      <li class="page-item ">
+                        <a class="page-link border-0" href="#" aria-label="Previous">
                           <span aria-hidden="true">&laquo;</span>
                         </a>
                       </li>
-                      <li class="page-item"><a class="page-link" href="#">1</a></li>
-                      <li class="page-item"><a class="page-link" href="#">2</a></li>
-                      <li class="page-item"><a class="page-link" href="#">3</a></li>
+                      <li class="page-item"><a class="page-link border-0" href="#">1</a></li>
+                      <li class="page-item"><a class="page-link border-0" href="#">2</a></li>
+                      <li class="page-item"><a class="page-link border-0" href="#">3</a></li>
                       <li class="page-item">
-                        <a class="page-link" href="#" aria-label="Next">
+                        <a class="page-link border-0" href="#" aria-label="Next">
                           <span aria-hidden="true">&raquo;</span>
                         </a>
                       </li>
