--- a/Data_form.html
+++ b/Data_form.html
@@ -237,6 +237,10 @@
                                 <div class="row">
                                     <div class="col-lg-8">
                                         <!-- textarea notes start  -->
+                                        <div class="form-floating mt-3">
+                                            <textarea class="form-control text-area-height"  placeholder="Leave a comment here" ></textarea>
+                                            <label for="floatingTextarea">Notes</label>
+                                          </div>
                                         <!-- textarea notes end  -->
                                     </div>
                                     <!-- drag and drop start -->
@@ -287,21 +291,12 @@
                                         </div>
                                         <!-- map location end  -->
                                     </div>
-
-
-
-
                                 </div>
-
-
                             </div>
                         </div>
-
-
                     </div>
                 </div>
             </div>
-
             <!-- form start  -->
         </div>
     </section>
