--- a/Index.html
+++ b/Index.html
@@ -21,15 +21,16 @@
     <div class="row">
       <!-- nav bar start -->
       <div class="col-lg-12 background_img">
-        <nav class="navbar  navbar-expand-lg bg-transparent py-4 border-bottom btn-secondary ">
-          <div class="container">
-            <a class="navbar-brand text-white" href="#">Logo</a>
+        <nav class="navbar  navbar-expand-lg fixed-top bg-transparent py-4 border-bottom btn-secondary ">
+          <div class="container d-none d-lg-block d-xl-block w-100">
+
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll"
               aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarScroll">
-              <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
+              <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll">
+                <li> <a class="navbar-brand nav-link text-white" href="#">Logo</a></li>
                 <li class="nav-item">
                   <a class="nav-link active text-white" aria-current="page" href="#">Dashboard</a>
                 </li>
@@ -43,11 +44,34 @@
                   <a class="nav-link text-white">Help</a>
                 </li>
               </ul>
-              <div class="d-flex" role="search">
+              <div class="d-flex justify-content-end w-100" role="search">
                 <button class="btn bg-transparent" type="submit"><i class="bi bi-search text-white"></i></button>
               </div>
             </div>
           </div>
+
+          <!-- mobile nav start  -->
+          <nav class="navbar navbar-light bg-transparent width_nav">
+            <div class="container d-block d-lg-none d-xl-none ">
+              <div class="d-flex justify-content-between ">
+                <div>
+                  <button class="btn " type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample"
+                    aria-controls="offcanvasExample">
+                    <i class="bi bi-menu-button-wide d-block text-white "></i>
+                  </button>
+                  <a class="navbar-brand text-white" href="#">Logo</a>
+                </div>
+
+                <div class="text-end">
+                  <button class="btn " type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExamplemenu"
+                    aria-controls="offcanvasExample">
+                    <i class="bi bi-menu-button-wide d-block text-white "></i>
+                  </button>
+                </div>
+              </div>
+            </div>
+          </nav>
+          <!-- mobile nav end  -->
         </nav>
       </div>
       <!-- nav bar end -->
@@ -57,37 +81,41 @@
   <section class="container hero_position">
     <div class="row">
       <!-- menu section start -->
-      <div class="col-1 bg-light shadow rounded_side_nav">
-        <i class="bi bi-menu-button-wide d-block d-flex justify-content-center py-5"></i>
-        <i class="bi bi-menu-button-wide d-block d-flex justify-content-center py-5"></i>
-        <i class="bi bi-menu-button-wide d-block d-flex justify-content-center py-5"></i>
-        <i class="bi bi-menu-button-wide d-block d-flex justify-content-center py-5"></i>
-        <i class="bi bi-menu-button-wide d-block d-flex justify-content-center py-5"></i>
-        <i class="bi bi-menu-button-wide d-block d-flex justify-content-center py-5"></i>
-      </div>
+      <div class="col-1 ">
+        <div class="bg-light shadow rounded_side_nav d-none d-lg-block d-xl-block">
+            <i class="bi bi-menu-button-wide d-block d-flex justify-content-center py-4"></i>
+        <i class="bi bi-menu-button-wide d-block d-flex justify-content-center py-4"></i>
+        <i class="bi bi-menu-button-wide d-block d-flex justify-content-center py-4"></i>
+        <i class="bi bi-menu-button-wide d-block d-flex justify-content-center py-4"></i>
+        <i class="bi bi-menu-button-wide d-block d-flex justify-content-center py-4"></i>
+        <i class="bi bi-menu-button-wide d-block d-flex justify-content-center py-4"></i>
+        <i class="bi bi-menu-button-wide d-block d-flex justify-content-center py-4"></i>
+        </div>
+    </div>
       <!-- menu section end -->
 
-      <div class="col-11 ">
+      <div class="col-lg-11 ">
         <div class="container-fluid">
           <div class="row bg-light rounded-3 pt-3">
 
             <!-- card start  -->
             <div class="col-lg-3">
-              <div class="card shadow border-0">
+              <div class="card shadow-sm border-0">
                 <div class="card-body">
                   <div class="row">
                     <div class="col-6">
-                      <h5 class="card-title">Total Logs</h5>
+                      <h5 class="card-title card_heading">Total Logs</h5>
                       <div>
-                        <span class="d-block mt-4 h5 text-danger">3</span>
-                        <span class="d-block text-muted">
+                        <span class="d-block mt-4  text-danger ">3 <i
+                            class="bi bi-arrow-down-short text-danger"></i></span>
+                        <span class="d-block text-muted task_text">
                           Task Count
                         </span>
                       </div>
                     </div>
                     <div class="col-6">
                       <div>
-                        <img src="./assets/imgs/thumbnailDonut.png" class="img-fluid" alt="">
+                        <img src="./assets/imgs/donut.png" class="img-fluid" alt="">
                       </div>
                     </div>
                   </div>
@@ -98,21 +126,22 @@
 
             <!-- card start  -->
             <div class="col-lg-3">
-              <div class="card shadow border-0">
+              <div class="card shadow-sm border-0">
                 <div class="card-body">
                   <div class="row">
                     <div class="col-6">
-                      <h5 class="card-title">Total Logs</h5>
+                      <h5 class="card-title card_heading">Total Logs</h5>
                       <div>
-                        <span class="d-block mt-4 h5 text-danger">3</span>
-                        <span class="d-block text-muted">
+                        <span class="d-block mt-4  text-danger ">3 <i
+                            class="bi bi-arrow-down-short text-danger"></i></span>
+                        <span class="d-block text-muted task_text">
                           Task Count
                         </span>
                       </div>
                     </div>
                     <div class="col-6">
                       <div>
-                        <img src="./assets/imgs/thumbnailDonut.png" class="img-fluid" alt="">
+                        <img src="./assets/imgs/donut.png" class="img-fluid" alt="">
                       </div>
                     </div>
                   </div>
@@ -123,21 +152,22 @@
 
             <!-- card start  -->
             <div class="col-lg-3">
-              <div class="card shadow border-0">
+              <div class="card shadow-sm border-0">
                 <div class="card-body">
                   <div class="row">
                     <div class="col-6">
-                      <h5 class="card-title">Total Logs</h5>
+                      <h5 class="card-title card_heading">Total Logs</h5>
                       <div>
-                        <span class="d-block mt-4 h5 text-danger">3</span>
-                        <span class="d-block text-muted">
+                        <span class="d-block mt-4  text-danger ">3 <i
+                            class="bi bi-arrow-down-short text-danger"></i></span>
+                        <span class="d-block text-muted task_text">
                           Task Count
                         </span>
                       </div>
                     </div>
                     <div class="col-6">
                       <div>
-                        <img src="./assets/imgs/thumbnailDonut.png" class="img-fluid" alt="">
+                        <img src="./assets/imgs/donut.png" class="img-fluid" alt="">
                       </div>
                     </div>
                   </div>
@@ -148,21 +178,22 @@
 
             <!-- card start  -->
             <div class="col-lg-3">
-              <div class="card shadow border-0">
+              <div class="card shadow-sm border-0">
                 <div class="card-body">
                   <div class="row">
                     <div class="col-6">
-                      <h5 class="card-title">Total Logs</h5>
+                      <h5 class="card-title card_heading">Total Logs</h5>
                       <div>
-                        <span class="d-block mt-4 h5 text-danger">3</span>
-                        <span class="d-block text-muted">
+                        <span class="d-block mt-4  text-danger ">3 <i
+                            class="bi bi-arrow-down-short text-danger"></i></span>
+                        <span class="d-block text-muted task_text">
                           Task Count
                         </span>
                       </div>
                     </div>
                     <div class="col-6">
                       <div>
-                        <img src="./assets/imgs/thumbnailDonut.png" class="img-fluid" alt="">
+                        <img src="./assets/imgs/donut.png" class="img-fluid" alt="">
                       </div>
                     </div>
                   </div>
@@ -174,8 +205,9 @@
 
             <!-- table start  -->
             <div class="col-lg-12 my-5">
+             
               <!-- table header menu start  -->
-              <div class="d-flex justify-content-between">
+              <div class="d-flex justify-content-between flex-column flex-lg-row">
                 <div class="d-flex">
                   <div>
                     <span class="btn action_btn_css">Location</span>
@@ -231,11 +263,14 @@
               </div>
 
               <!-- table header menu end  -->
-
+              <div class="table-responsive">
               <table class="table table-borderless shadow-sm mt-2">
                 <!-- table head  -->
                 <thead class="border-bottom">
                   <tr>
+                    <th>
+                      <input class="form-check-input check_box_size" type="checkbox" >
+                    </th>
                     <th scope="col" class="text-muted text_style_TH">Order ID</th>
                     <th scope="col" class="text-muted text_style_TH">Customer </th>
                     <th scope="col" class="text-muted text_style_TH">Status</th>
@@ -249,6 +284,7 @@
                 <tbody>
                   <!--table row one start -->
                   <tr>
+                    <td> <input class="form-check-input check_box_size" type="checkbox" ></td>
                     <th scope="row" class="cell_table">14397</th>
                     <td>
                       <div class="d-flex align-items-center gap-3">
@@ -279,6 +315,7 @@
 
                   <!--table row two start -->
                   <tr>
+                    <td> <input class="form-check-input check_box_size" type="checkbox" ></td>
                     <th scope="row" class="cell_table">14397</th>
                     <td>
                       <div class="d-flex align-items-center gap-3">
@@ -309,7 +346,7 @@
 
                 </tbody>
               </table>
-
+            </div>
               <div class="d-flex justify-content-between">
                 <div>
                   <div class="dropdown shadow-sm">
@@ -354,6 +391,60 @@
     </div>
   </section>
   <!-- dashboard section end -->
+
+
+  <!-- off canva menu one start -->
+  <div class="offcanvas offcanvas-start offcanvas_width" tabindex="-1" id="offcanvasExample"
+    aria-labelledby="offcanvasExampleLabel">
+    <div class="offcanvas-header">
+      <h5 class="offcanvas-title" id="offcanvasExampleLabel">menu</h5>
+      <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+    </div>
+    <div class="offcanvas-body">
+      <div>
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-12 bg-light  rounded_side_nav ">
+              <i class="bi bi-menu-button-wide d-block d-flex justify-content-center py-4"></i>
+              <i class="bi bi-menu-button-wide d-block d-flex justify-content-center py-4"></i>
+              <i class="bi bi-menu-button-wide d-block d-flex justify-content-center py-4"></i>
+              <i class="bi bi-menu-button-wide d-block d-flex justify-content-center py-4"></i>
+              <i class="bi bi-menu-button-wide d-block d-flex justify-content-center py-4"></i>
+              <i class="bi bi-menu-button-wide d-block d-flex justify-content-center py-4"></i>
+              <i class="bi bi-menu-button-wide d-block d-flex justify-content-center py-4"></i>
+              <i class="bi bi-menu-button-wide d-block d-flex justify-content-center py-4"></i>
+              <i class="bi bi-menu-button-wide d-block d-flex justify-content-center py-4"></i>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- off canva menu one end -->
+
+  <!-- off canva menu two start -->
+  <div class="offcanvas offcanvas-start offcanvas_width_two" tabindex="-1" id="offcanvasExamplemenu"
+    aria-labelledby="offcanvasExampleLabel">
+    <div class="offcanvas-header">
+      <h5 class="offcanvas-title" id="offcanvasExampleLabel">menu</h5>
+      <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+    </div>
+    <div class="offcanvas-body">
+      <div>
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-12 bg-light  rounded_side_nav ">
+              <button class="btn d-block">Dashboard</button>
+              <button class="btn d-block">Pages</button>
+              <button class="btn d-block">App</button>
+              <button class="btn d-block">Help</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- off canva menu two end -->
 
   <!-- boostrap js  -->
   <script src="./assets/vendor/bootstrap-5.3.2-dist/js/bootstrap.bundle.min.js"></script>
