--- a/Index.html
+++ b/Index.html
@@ -404,7 +404,7 @@
       <div>
         <div class="container-fluid">
           <div class="row">
-            <div class="col-12 bg-light  rounded_side_nav ">
+            <div class="col-12 bg-light  ">
               <i class="bi bi-menu-button-wide d-block d-flex justify-content-center py-4"></i>
               <i class="bi bi-menu-button-wide d-block d-flex justify-content-center py-4"></i>
               <i class="bi bi-menu-button-wide d-block d-flex justify-content-center py-4"></i>
@@ -433,7 +433,7 @@
       <div>
         <div class="container-fluid">
           <div class="row">
-            <div class="col-12 bg-light  rounded_side_nav ">
+            <div class="col-12 bg-light  ">
               <button class="btn d-block">Dashboard</button>
               <button class="btn d-block">Pages</button>
               <button class="btn d-block">App</button>
