--- a/Index.html
+++ b/Index.html
@@ -81,7 +81,7 @@
   <section class="container hero_position">
     <div class="row">
       <!-- menu section start -->
-      <div class="col-1 ">
+      <div class="col-1 width_col-1">
         <div class="bg-light shadow rounded_side_nav d-none d-lg-block d-xl-block">
             <i class="bi bi-menu-button-wide d-block d-flex justify-content-center py-4"></i>
         <i class="bi bi-menu-button-wide d-block d-flex justify-content-center py-4"></i>
@@ -94,7 +94,7 @@
     </div>
       <!-- menu section end -->
 
-      <div class="col-lg-11 ">
+      <div class="col-lg-11  col-lg-11_width">
         <div class="container-fluid">
           <div class="row bg-light rounded-3 pt-3">
 
