--- a/Index.html
+++ b/Index.html
@@ -213,10 +213,10 @@
                 <div class="d-flex flex-column flex-lg-row">
                   <div class="d-flex">
                     <div>
-                      <span class="btn action_btn_css">Location</span>
+                      <span class="btn action_btn_css bg-white border-0">Location</span>
                     </div>
                     <div>
-                      <div class="dropdown">
+                      <div class="dropdown ms-1">
                         <button class="btn action_btn_css dropdown-toggle" type="button" data-bs-toggle="dropdown"
                           aria-expanded="false">
                           Action
@@ -229,10 +229,10 @@
                       </div>
                     </div>
                     <div>
-                      <span class="btn action_btn_css">Location</span>
+                      <span class="btn action_btn_css ms-1 bg-white border-0">Location</span>
                     </div>
                     <div>
-                      <div class="dropdown">
+                      <div class="dropdown ms-1">
                         <button class="btn action_btn_css dropdown-toggle" type="button" data-bs-toggle="dropdown"
                           aria-expanded="false">
                           Action
@@ -245,19 +245,22 @@
                       </div>
                       
                     </div>
+                    <div>
+                      <span class="btn action_btn_css ms-1"><i class="bi bi-funnel-fill"></i> Filter</span>
+                    </div>
                   </div>
-                  <div class="d-flex ">
+                  <!-- <div class="d-flex ">
                     <div class="ms-3">
                       <div class="input-group mb-3 w-75" >
                         <span class="input-group-text btn border" id="basic-addon1"><i class="bi bi-search"></i></span>
                         <input type="text" class="form-control form-control-solid border" placeholder="Search" aria-label="Username" aria-describedby="basic-addon1">
                       </div>
                     </div>
-                  </div>
+                  </div> -->
                 </div>
                 <div class="d-flex">
-                  <div class="dropdown ">
-                    <button class="btn action_btn_css dropdown-toggle" type="button" data-bs-toggle="dropdown"
+                  <div class="dropdown me-1">
+                    <button class="btn action_btn_css dropdown-toggle " type="button" data-bs-toggle="dropdown"
                       aria-expanded="false">
                       Action
                     </button>
