--- a/Data_form.html
+++ b/Data_form.html
@@ -347,10 +347,13 @@
                                 </div>
                                 <!-- radio buttons start  -->
                                 <div class="row rounded-3 border bg-white border-light pt-3 mt-3 shadow-sm">
+                                    <div class="col-lg-12  ">
+                                        <span class="head_style_radio  d-block px-2 mb-3 border-bottom pb-3"> Advanced User</span>
+                                    </div>
                                     <div class="col-lg-4">
                                         <div class="d-flex justify-content-between flex-column flex-lg-row flex-md-row mb-3">
-                                            <div>
-                                                <label for="" class="p-1 me-4 form-label_css">Create Emergency Log?</label>
+                                            <div class="">
+                                                <label for="" class="p-1 me-1 form-label_css">Create Emergency Log?</label>
                                             </div>
                                           <div class="d-flex">
                                               <div class="form-check">
@@ -371,7 +374,7 @@
                                         </div>
                                         <div class="d-flex justify-content-between flex-column flex-lg-row flex-md-row mb-3">
                                             <div>
-                                                <label for="" class="p-1 me-4 form-label_css">Create wildlife report?</label>
+                                                <label for="" class="p-1 me-1 form-label_css">Create wildlife report?</label>
                                             </div>
                                           <div class="d-flex">
                                             <div class="form-check">
@@ -392,7 +395,7 @@
                                         </div>
                                         <div class="d-flex justify-content-between flex-column flex-lg-row flex-md-row mb-3">
                                             <div>
-                                                <label for="" class="p-1 me-4 form-label_css">Is this a potential hazard/risk ?</label>
+                                                <label for="" class="p-1 me-1 form-label_css">Is this a potential hazard/risk ?</label>
                                             </div>
                                            <div class="d-flex">
                                             <div class="form-check">
@@ -418,7 +421,7 @@
                                     <div class="col-lg-4">
                                         <div class="d-flex justify-content-between flex-column flex-lg-row flex-md-row mb-3">
                                             <div>
-                                                <label for="" class="p-1 me-4 form-label_css">Import METAR and TAF?</label>
+                                                <label for="" class="p-1 me-1 form-label_css">Import METAR and TAF?</label>
                                             </div>
                                            <div class="d-flex">
                                             <div class="form-check">
@@ -439,7 +442,7 @@
                                         </div>
                                         <div class="d-flex justify-content-between flex-column flex-lg-row flex-md-row mb-3">
                                             <div>
-                                                <label for="" class="p-1 me-4 form-label_css">Create an incident?</label>
+                                                <label for="" class="p-1 me-1 form-label_css">Create an incident?</label>
                                             </div>
                                           <div class="d-flex">
                                             <div class="form-check">
@@ -460,7 +463,7 @@
                                         </div>
                                         <div class="d-flex justify-content-between flex-column flex-lg-row flex-md-row mb-3">
                                             <div>
-                                                <label for="" class="p-1 me-4 form-label_css">Do you want to issue a NOTAM?</label>
+                                                <label for="" class="p-1 me-1 form-label_css">Do you want to issue a NOTAM?</label>
                                             </div>
                                            <div class="d-flex">
                                             <div class="form-check">
@@ -485,7 +488,7 @@
                                     <div class="col-lg-4">
                                         <div class="d-flex justify-content-between flex-column flex-lg-row flex-md-row mb-3">
                                             <div>
-                                                <label for="" class="p-1 me-4 form-label_css">Create a work order?</label>
+                                                <label for="" class="p-1 me-1 form-label_css">Create a work order?</label>
                                             </div>
                                            <div class="d-flex">
                                             <div class="form-check">
@@ -506,7 +509,7 @@
                                         </div>
                                         <div class="d-flex  justify-content-between flex-column flex-lg-row flex-md-row mb-3">
                                             <div>
-                                                <label for="" class="p-1 me-4 form-label_css">Create a safety event?</label>
+                                                <label for="" class="p-1 me-1 form-label_css">Create a safety event?</label>
                                             </div>
                                            <div class="d-flex">
                                             <div class="form-check">
@@ -531,10 +534,13 @@
             
                                <!-- radio buttons start  -->
                                <div class="row rounded-3 bg-white border border-light pt-3 mt-3 shadow-sm">
+                                <div class="col-lg-12  ">
+                                    <span class="head_style_radio  d-block px-2 mb-3 border-bottom pb-3">Administrator</span>
+                                </div>
                                 <div class="col-lg-4">
                                     <div class="d-flex justify-content-between flex-column flex-lg-row flex-md-row mb-3">
                                         <div>
-                                            <label for="" class="p-1 me-4 form-label_css">Add to Safety/Ops meeting agenda</label>
+                                            <label for="" class="p-1 me-1 form-label_css">Add to Safety/Ops meeting agenda</label>
                                         </div>
                                       <div class="d-flex">
                                           <div class="form-check">
@@ -555,7 +561,7 @@
                                     </div>
                                     <div class="d-flex justify-content-between flex-column flex-lg-row flex-md-row mb-3">
                                         <div>
-                                            <label for="" class="p-1 me-4 form-label_css">Add to OH & S Committee agenda</label>
+                                            <label for="" class="p-1 me-1 form-label_css">Add to OH & S Committee agenda</label>
                                         </div>
                                       <div class="d-flex">
                                         <div class="form-check">
@@ -579,7 +585,7 @@
                                 <div class="col-lg-4">
                                     <div class="d-flex justify-content-between flex-column flex-lg-row flex-md-row mb-3">
                                         <div>
-                                            <label for="" class="p-1 me-4 form-label_css">Add to Security Committee agenda</label>
+                                            <label for="" class="p-1 me-1 form-label_css">Add to Security Committee agenda</label>
                                         </div>
                                        <div class="d-flex">
                                         <div class="form-check">
@@ -600,7 +606,7 @@
                                     </div>
                                     <div class="d-flex justify-content-between flex-column flex-lg-row flex-md-row mb-3">
                                         <div>
-                                            <label for="" class="p-1 me-4 form-label_css">Add to Winter Briefing Agenda</label>
+                                            <label for="" class="p-1 me-1 form-label_css">Add to Winter Briefing Agenda</label>
                                         </div>
                                       <div class="d-flex">
                                         <div class="form-check">
@@ -623,7 +629,7 @@
                                 <div class="col-lg-4">
                                     <div class="d-flex justify-content-between flex-column flex-lg-row flex-md-row mb-3">
                                         <div>
-                                            <label for="" class="p-1 me-4 form-label_css">Add to Safety Committee agenda</label>
+                                            <label for="" class="p-1 me-1 form-label_css">Add to Safety Committee agenda</label>
                                         </div>
                                        <div class="d-flex">
                                         <div class="form-check">
@@ -644,7 +650,7 @@
                                     </div>
                                     <div class="d-flex  justify-content-between flex-column flex-lg-row flex-md-row mb-3">
                                         <div>
-                                            <label for="" class="p-1 me-4 form-label_css">Add to Wildlife Breifing Agenda</label>
+                                            <label for="" class="p-1 me-1 form-label_css">Add to Wildlife Breifing Agenda</label>
                                         </div>
                                        <div class="d-flex">
                                         <div class="form-check">
