--- a/Data_form.html
+++ b/Data_form.html
@@ -308,7 +308,7 @@
                                                     
 
                                                     <div class="custom-file mt-3 position-relative" >
-                                                        <input type="text" class="form-control border form-control-solid form-input_text" placeholder="Select File To Upload">
+                                                        <input type="text" class="form-control border form-control-solid form-input_text" placeholder="Select File To Upload" disabled>
                                                         <div class="position-absolute top-50 end-0 translate-middle-y">
                                                             <button class="me-2 btn bg-white"> Choose Files</button>
                                                         </div>
