--- a/Index.html
+++ b/Index.html
@@ -21,7 +21,7 @@
     <div class="row">
       <!-- nav bar start -->
       <div class="col-lg-12 background_img">
-        <nav id="colorChangingDiv" class="navbar fixed-top   navbar-expand-lg  py-4 border-bottom btn-secondary ">
+        <nav id="colorChangingDiv" class="navbar fixed-top   navbar-expand-lg  py-4  btn-secondary ">
           <div class="container d-none d-lg-block d-xl-block w-100">
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll"
