--- a/safety_screen.html
+++ b/safety_screen.html
@@ -22,7 +22,7 @@
             <!-- nav bar start -->
             <div class="col-lg-12 background_img">
                 <nav id="colorChangingDiv"
-                    class="navbar fixed-top   navbar-expand-lg  py-4 border-bottom btn-secondary ">
+                    class="navbar fixed-top   navbar-expand-lg  py-4 btn-secondary ">
                     <div class="container d-none d-lg-block d-xl-block w-100">
 
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -114,7 +114,8 @@
                                 <li class="nav-item" role="presentation">
                                     <button class="nav-link" id="pills-profile-tab" data-bs-toggle="pill"
                                         data-bs-target="#pills-profile" type="button" role="tab"
-                                        aria-controls="pills-profile" aria-selected="false">Hazard & Risk Register</button>
+                                        aria-controls="pills-profile" aria-selected="false">Hazard & Risk
+                                        Register</button>
                                 </li>
                                 <li class="nav-item" role="presentation">
                                     <button class="nav-link" id="pills-contact-tab" data-bs-toggle="pill"
@@ -129,7 +130,8 @@
                                 <li class="nav-item" role="presentation">
                                     <button class="nav-link" id="pills-contact-tab" data-bs-toggle="pill"
                                         data-bs-target="#pills-contact-2" type="button" role="tab"
-                                        aria-controls="pills-contact" aria-selected="false">Quality Assurance Audit</button>
+                                        aria-controls="pills-contact" aria-selected="false">Quality Assurance
+                                        Audit</button>
                                 </li>
                                 <li class="nav-item" role="presentation">
                                     <button class="nav-link" id="pills-disabled-tab" data-bs-toggle="pill"
@@ -381,41 +383,48 @@
                                                     </div>
                                                 </div>
                                             </div>
-<div class="mt-3">
-    <div class="row">
-        <div class="col-lg-12 ">
-            <div class="mx-lg-5">
-                <img src="./assets/imgs/map.jpg" class="img-fluid " alt="">
-            </div>
-        </div>
-        <div class="col-lg-8 mb-3">
-            <label for="exampleFormControlInput1"
-                class="font_lable form-label mt-3 ">Safety Issue Description</label>
-            <textarea
-                class="form-control form-control-solid form-input_text"
-                type="text">
+                                            <div class="mt-3">
+                                                <div class="row">
+                                                    <div class="col-lg-12 ">
+                                                        <div class="mx-lg-5">
+                                                            <img src="./assets/imgs/map.jpg" class="img-fluid " alt="">
+                                                        </div>
+                                                    </div>
+                                                    <div class="col-lg-8 mb-3">
+                                                        <label for="exampleFormControlInput1"
+                                                            class="font_lable form-label mt-3 ">Safety Issue
+                                                            Description</label>
+                                                        <textarea
+                                                            class="form-control form-control-solid form-input_text"
+                                                            type="text">
 </textarea>
-        </div>
-        <div class="col-lg-4 d-flex align-items-end mb-3 ">
-                <div class="custom-file mt-3 position-relative w-100">
-                    <input type="text"
-                        class="form-control border form-control-solid form-input_text"
-                        placeholder="Select File To Upload" disabled>
-                    <div class="position-absolute top-50 end-0 translate-middle-y">
-                        <button class="me-2 btn bg-white"> Choose Files</button>
-                    </div>
-    
-            </div>
-        </div>
-        <div class="col-lg-12 mb-3">
-            <div class="d-flex justify-content-lg-end flex-column flex-lg-row flex-md-row ">
-<button class="btn btn-light border "><i class="bi bi-floppy2"></i> Save as Draft </button>
-<button class="btn btn-outline-primary ms-2 me-2"><i class="bi bi-cloud-download-fill "></i> Submit</button>
-<button class="btn btn-outline-danger"> <i class="bi bi-x-circle"></i> Cancel</button>
-            </div>
-        </div>
-    </div>
-</div>
+                                                    </div>
+                                                    <div class="col-lg-4 d-flex align-items-end mb-3 ">
+                                                        <div class="custom-file mt-3 position-relative w-100">
+                                                            <input type="text"
+                                                                class="form-control border form-control-solid form-input_text"
+                                                                placeholder="Select File To Upload" disabled>
+                                                            <div
+                                                                class="position-absolute top-50 end-0 translate-middle-y">
+                                                                <button class="me-2 btn bg-white"> Choose Files</button>
+                                                            </div>
+
+                                                        </div>
+                                                    </div>
+                                                    <div class="col-lg-12 mb-3">
+                                                        <div
+                                                            class="d-flex justify-content-lg-end flex-column flex-lg-row flex-md-row ">
+                                                            <button class="btn btn-light border "><i
+                                                                    class="bi bi-floppy2"></i> Save as Draft </button>
+                                                            <button class="btn btn-outline-primary ms-2 me-2"><i
+                                                                    class="bi bi-cloud-download-fill "></i>
+                                                                Submit</button>
+                                                            <button class="btn btn-outline-danger"> <i
+                                                                    class="bi bi-x-circle"></i> Cancel</button>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
                                             <!-- tab one end  -->
                                         </div>
                                         <div class="tab-pane fade" id="pills-profile1" role="tabpanel"
@@ -511,16 +520,16 @@
                                 </div>
                                 <!-- tab  6-->
 
-                                 <!-- tab  7-->
-                                 <div class="tab-pane fade" id="pills-disabled-12" role="tabpanel"
-                                 aria-labelledby="pills-disabled-tab" tabindex="0">7
+                                <!-- tab  7-->
+                                <div class="tab-pane fade" id="pills-disabled-12" role="tabpanel"
+                                    aria-labelledby="pills-disabled-tab" tabindex="0">7
 
 
-                                 <!-- tab seven start  -->
-                                 <!-- tab seven end  -->
+                                    <!-- tab seven start  -->
+                                    <!-- tab seven end  -->
 
-                             </div>
-                             <!-- tab  7-->
+                                </div>
+                                <!-- tab  7-->
 
                             </div>
                             <!-- tabs end  -->
@@ -528,7 +537,26 @@
                         </div>
                     </div>
 
+                    <div class="row">
+                        <div class="col-lg-12 px-0 mt-3">
+                            <div class="border mb-3 bg-white rounded-3 shadow-sm">
 
+                                <div class="row  px-2">
+                                    <div class="col-lg-12 mb-3">
+                                        <h5 class="mt-3">Confidential</h5>
+                                        <span class="d-block text-muted mt-3">This information will stay hidden to both
+                                            the program administrator & manager. Please enter your email to get updates
+                                            on the report
+                                        </span>
+                                        <label for="exampleFormControlInput1" class="font_lable form-label mt-3 ">Email:
+                                        </label>
+                                        <input class="form-control form-control-solid form-input_text " type="text">
+                                        </input>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
 
                 </div>
             </div>
