--- a/Data_form.html
+++ b/Data_form.html
@@ -813,7 +813,7 @@
 
     <!-- floating buttons -->
     <div class=" position-fixed bottom-0 end-0">
-        <div class="d-flex mb-5">
+        <div class="d-flex mb-1 me-1">
             <span class="bg-white rounded border shadow d-block ">
                 <button class="btn btn-light border ms-2 my-2"><i class="bi bi-floppy2"></i> Save as Draft</button>
                 <button class="btn btn-primary ms-2 me-2"><i class="bi bi-cloud-download-fill text-white"></i>
