--- a/notam.html
+++ b/notam.html
@@ -295,7 +295,7 @@
 
     <!-- floating buttons -->
     <div class=" position-fixed bottom-0 end-0">
-        <div class="d-flex mb-5">
+        <div class="d-flex me-1 mb-1">
             <span class="bg-white rounded border shadow d-block ">
                 <button class="btn btn-light border ms-2 my-2"><i class="bi bi-envelope-at-fill"></i> Email NOTAM</button>
                 <button class="btn btn-outline-danger ms-2 me-2"><i class="bi bi-x-circle-fill"></i>
